@@ -58,6 +58,9 @@ t/corpus/good_dk_yahoo.txt
 t/corpus/good_dk_gmail.txt
 t/corpus/good_dk_1.txt
 t/corpus/good_dk_2.txt
+t/corpus/good_dk_3.txt
+t/corpus/good_dk_4.txt
+t/corpus/good_dk_5.txt
 t/corpus/good_rfc4871_3.txt
 t/corpus/dk_headers_1.txt
 t/corpus/dk_headers_2.txt
