@@ -1,0 +1,26 @@
+DomainKey-Signature: a=rsa-sha1; c=nofws; d=messiah.edu; h=from:sender:to:
+	subject:date:message-id; q=dns; s=test4; b=i5J01ofFaB5XDFC9+O3nb
+	mcThOO+QW75bwDxNWVt+PsZOuTqB8qu1v9wu9mC6VF3I56lpwQIQEgZoecCQT4eb
+	Q==
+Received: from x.y.test
+   by example.net
+   via TCP
+   with ESMTP
+   id ABC12345
+   for <mary@example.net>;  21 Nov 1997 10:05:43 -0600
+Received: from machine.example by x.y.test; 21 Nov 1997 10:01:22 -0600
+From: George <george@example.com>
+Sender: Jason Long <jlong@messiah.edu>
+To: Nobody <nobody@messiah.edu>
+Subject: domainkeys test (key has empty g=, should pass)
+Date: Wed, 7 Dec 2005 09:11:00 -0500
+Message-ID: <20051207091100@test.messiah.edu>
+
+This is a test
+  More lines here
+
+
+Blah  blah  blah
+
+
+
